--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><strong>Phone:</strong> +918698599303</li>
         <li><strong>Email:</strong> manalnaik5@gmail.com</li>
         <li><strong>LinkedIn:</strong> <a href="LinkedIn Profile">LinkedIn Profile</a></li>
-        <li><strong>GitHub:</strong> <a href="moofieee">moofieee</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/moofieee">moofieee</a></li>
     </ul>
 
     <h2>Professional Experience</h2>
