--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><strong>Location:</strong> Mumbai, India</li>
         <li><strong>Phone:</strong> +918698599303</li>
         <li><strong>Email:</strong> manalnaik5@gmail.com</li>
-        <li><strong>LinkedIn:</strong> <a href="LinkedIn Profile">LinkedIn Profile</a></li>
+        <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/manal-naik-8b17002b2/">LinkedIn Profile</a></li>
         <li><strong>GitHub:</strong> <a href="https://github.com/moofieee">moofieee</a></li>
     </ul>
 
