--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             <ul>
                 <li>DevOps Mastery</li>
                 <li>Python and SQL: Unlocking Data-Driven Insights</li>
+                <li>AWS Certified Cloud Practitioner</li>
+                <li>Microsoft Certified: Azure Fundamentals</li>
             </ul>
         </article>
     </section>
